--- a/src/app/pages/forum/components/category/forum-category-detail/forum-category-detail.component.html
+++ b/src/app/pages/forum/components/category/forum-category-detail/forum-category-detail.component.html
@@ -30,7 +30,7 @@
 
         <div nz-col [nzSpan]="8">
           <span class="text-label">
-          {{'banner_link'}} 
+          {{'banner_link' | translate}} 
             <span class="text-danger">*</span>
           </span>
 
