--- a/src/app/pages/setting/components/permissions/create-permission/create-permission.component.html
+++ b/src/app/pages/setting/components/permissions/create-permission/create-permission.component.html
@@ -35,8 +35,8 @@
     </div>
 
     <div nz-col [nzSpan]="20" class="block-content">
-      <div class="d-flex justify-content-between align-items-center">
-        <span class="text-label">
+      <div class="d-flex align-items-center">
+        <span class="text-label" style="margin-right:.5rem">
           {{'description' | translate}}
           <span class="text-danger">*</span>
         </span>
