--- a/src/app/pages/event/components/create-event/create-event.component.html
+++ b/src/app/pages/event/components/create-event/create-event.component.html
@@ -15,10 +15,13 @@
     <form [formGroup]="eventForm">
       <div nz-row [nzGutter]="[16, 16]">
         <div nz-col [nzXs]="24" [nzSm]="12" [nzMd]="8">
-          <span class="text-label">
-            {{ 'event_name' | translate }}
-            <span class="text-danger">*</span>
-          </span>
+          <div class="d-flex justify-content-between align-items-center">
+            <span class="text-label">
+              {{ 'event_name' | translate }}
+              <span class="text-danger">*</span>
+            </span>
+            <span nzTooltipTitle="{{'guide_event_name' | translate}}" nzTooltipPlacement="top" nz-tooltip nz-icon nzType="question-circle" nzTheme="outline"></span>
+          </div>
 
           <input nz-input autofocus formControlName="title" [nzStatus]="(eventForm.get('title')?.invalid &&
                         (eventForm.get('title')?.touched || isSubmit)) ? 'error' : ''">
@@ -29,11 +32,13 @@
         </div>
 
         <div nz-col [nzXs]="24" [nzSm]="12" [nzMd]="8">
-          <span class="text-label">
-            {{ 'started_at' | translate }}
-            <span class="text-danger">*</span>
-          </span>
-
+          <div class="d-flex justify-content-between align-items-center">
+            <span class="text-label">
+              {{ 'started_at' | translate }}
+              <span class="text-danger">*</span>
+            </span>
+            <span nzTooltipTitle="{{'guide_event_time' | translate}}" nzTooltipPlacement="top" nz-tooltip nz-icon nzType="question-circle" nzTheme="outline"></span>
+          </div>
           <nz-date-picker nzShowTime formControlName="dateOfEvent" [nzStatus]="(eventForm.get('dateOfEvent')?.invalid &&
                                       (eventForm.get('dateOfEvent')?.touched || isSubmit)) ? 'error' : ''">
           </nz-date-picker>
@@ -45,18 +50,24 @@
         </div>
 
         <div nz-col [nzXs]="24" [nzSm]="12" [nzMd]="8">
-          <span class="text-label">
-            {{ 'status' | translate }}
-          </span>
+          <div class="d-flex align-items-center">
+            <span class="text-label" style="margin-right:.5rem">
+              {{ 'status' | translate }}
+            </span>
+            <span nzTooltipTitle="{{'guide_event_status' | translate}}" nzTooltipPlacement="top" nz-tooltip nz-icon nzType="question-circle" nzTheme="outline"></span>
+          </div>
 
           <nz-switch formControlName="status" style="display: block"></nz-switch>
         </div>
 
         <div nz-col [nzXs]="24" [nzSm]="12" [nzMd]="8">
-          <span class="text-label">
-            {{'avatar' | translate}}
-            <span class="text-danger">*</span>
-          </span>
+          <div class="d-flex justify-content-between align-items-center">
+            <span class="text-label">
+              {{'avatar' | translate}}
+              <span class="text-danger">*</span>
+            </span>
+            <span nzTooltipTitle="{{'guide_event_avatar' | translate}}" nzTooltipPlacement="top" nz-tooltip nz-icon nzType="question-circle" nzTheme="outline"></span>
+          </div>
 
           <div style="display: flex">
             <input nz-input formControlName="imagePath" [nzStatus]="(eventForm.get('imagePath')?.invalid &&
@@ -68,16 +79,19 @@
 
           <span class="text-danger" *ngIf="(eventForm.get('imagePath')?.touched || isSubmit)  &&
                     eventForm.get('imagePath')?.hasError('required')">
-            Ảnh đại diện {{'cannot_blank' | translate}}
+            {{'avatar' | translate }} {{'cannot_blank' | translate}}
           </span>
         </div>
 
 
         <div nz-col [nzXs]="24" [nzSm]="12" [nzMd]="8">
-          <span class="text-label">
-            {{ 'location' | translate }}
-            <span class="text-danger">*</span>
-          </span>
+          <div class="d-flex justify-content-between align-items-center">
+            <span class="text-label">
+              {{ 'location' | translate }}
+              <span class="text-danger">*</span>
+            </span>
+            <span nzTooltipTitle="{{'guide_event_location' | translate}}" nzTooltipPlacement="top" nz-tooltip nz-icon nzType="question-circle" nzTheme="outline"></span>
+          </div>
 
           <input nz-input formControlName="local" [nzStatus]="(eventForm.get('local')?.invalid &&
                              (eventForm.get('local')?.touched || isSubmit)) ? 'error' : ''">
@@ -88,10 +102,13 @@
         </div>
 
         <div nz-col [nzXs]="24" [nzSm]="12" [nzMd]="8">
-          <span class="text-label">
-            {{'event_link' | translate}}
-            <span class="text-danger">*</span>
-          </span>
+          <div class="d-flex justify-content-between align-items-center">
+            <span class="text-label">
+              {{'event_link' | translate}}
+              <span class="text-danger">*</span>
+            </span>
+            <span nzTooltipTitle="{{'guide_event_link' | translate}}" nzTooltipPlacement="top" nz-tooltip nz-icon nzType="question-circle" nzTheme="outline"></span>
+          </div>
 
           <input nz-input formControlName="link" [nzStatus]="(eventForm.get('link')?.invalid &&
                              (eventForm.get('link')?.touched || isSubmit)) ? 'error' : ''">
@@ -102,9 +119,12 @@
         </div>
 
         <div nz-col [nzXs]="24" [nzSm]="16" [nzMd]="16">
-          <span class="text-label">
+          <div class="d-flex align-items-center">
+          <span class="text-label" style="margin-right:.5rem">
             {{'description' | translate}}
           </span>
+          <span nzTooltipTitle="{{'guide_event_description' | translate}}" nzTooltipPlacement="top" nz-tooltip nz-icon nzType="question-circle" nzTheme="outline"></span>
+        </div>
 
           <textarea formControlName="description" nz-input [nzAutosize]="{ minRows: 3 }"></textarea>
         </div>
