--- a/src/app/pages/testimonials/components/create-testimonial/create-testimonial.component.html
+++ b/src/app/pages/testimonials/components/create-testimonial/create-testimonial.component.html
@@ -50,7 +50,7 @@
           <nz-select formControlName="type">
             <nz-option [nzValue]="1" [nzLabel]="'learners' | translate"></nz-option>
             <nz-option [nzValue]="2" [nzLabel]="'teachers' | translate"></nz-option>
-            <nz-option [nzValue]="3" [nzLabel]="'partners | translate'"></nz-option>
+            <nz-option [nzValue]="3" [nzLabel]="'partners' | translate"></nz-option>
           </nz-select>
         </div>
 
